Disable native access warnings